--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
     margin: 32px 114px 54px 34px;
 }
 
+
 #nav-h4 {
     font-size: 14px;
     color: #828FA3;
@@ -30,4 +31,77 @@ body {
     font-size: 24px;
     font-weight: bold;
     margin: 29px 947px 37px 24px;
+}
+
+.kanban-body{
+    border-left: 2px solid #F4F7FD;
+}
+
+header {
+    border-bottom: 1px solid #F4F7FD;
+}
+
+.task-container {
+    background-color: #E4EBFA;
+    width: 1140px;
+    height: 1000px;
+    padding: 24px;
+    box-shadow: -6px -6px 12px rgba(54, 78, 126, 0.1);
+}
+
+.task-cols {
+    display: grid;
+    grid-template-columns: repeat(3,280px);
+    gap: 20px;
+    margin: 0px;
+}
+
+.task-section {
+    margin: 0px;
+}
+
+#todo-span {
+    width: 15px;
+    height: 15px;
+    background-color: #49C4E5;
+    border-radius: 100px;
+}
+
+#doing-span {
+    width: 15px;
+    height: 15px;
+    background-color: #8471F2;
+    border-radius: 100px;
+}
+
+#done-span {
+    width: 15px;
+    height: 15px;
+    background-color: #67E2AE;
+    border-radius: 100px;
+}
+
+.task-heading {
+    display: flex;
+
+}
+
+.task-h4 {
+    border: 0px;
+    margin: 0px 0px 24px 12px;
+    font-size: 12px;
+    font-weight: bold;
+    color: #828FA3;
+    letter-spacing: 2px;
+}
+
+.task-btn {
+    background-color: white;
+    border-radius: 8px;
+    padding: 20px;
+    font-size: 15px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    box-shadow: 0px 4px 6px rgba(54, 78, 126, 0.1);
+
 }
